[tool.poetry]
name = "learning-bdd-python"
version = "0.1.0"
description = ""
authors = ["Vinicius Moda <vinicius.santiagomoda@gmail.com>", "Jéssica Oliveira <jeh.ajdo@gmail.com>", "Valéria Silva <silvvavaleria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
